[gd_scene load_steps=24 format=2]

[ext_resource path="res://Levels/Menu/Death Screen.gd" type="Script" id=1]
[ext_resource path="res://Levels/Menu/desktop-1920x1080.jpg.png" type="Texture" id=2]
[ext_resource path="res://Misc/Black.jpg" type="Texture" id=3]
[ext_resource path="res://Shaders/Light1.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Hemwick/DeathChoir.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/UI/Hover.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/UI/Click.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=8]
resource_name = "Fade In"
length = 99999.0
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.8, 5.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Desktop-1920X1080jpg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.1, 6.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.94902 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Load Game:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.7, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Quit to Desktop:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5.7, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Quit to Desktop:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Load Game:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "audio"
tracks/7/path = NodePath("Choir")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="Animation" id=10]
resource_name = "Fade Out"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Desktop-1920X1080jpg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.627451 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Desktop-1920X1080jpg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "Quit"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFontData" id=901]
font_path = "res://Fonts/JenrivTitlingRegular-x3RKV.otf"

[sub_resource type="DynamicFont" id=902]
size = 145
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 901 )

[sub_resource type="Theme" id=903]
default_font = SubResource( 902 )

[sub_resource type="DynamicFontData" id=889]
font_path = "res://Fonts/JenrivTitlingRegular-x3RKV.otf"

[sub_resource type="DynamicFont" id=887]
size = 43
outline_size = 1
outline_color = Color( 0.713726, 0.454902, 0.0235294, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 889 )

[sub_resource type="Theme" id=890]
default_font = SubResource( 887 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.203922, 0.203922, 0.203922, 0.2 )
Button/colors/font_color_focus = Color( 1, 0.756863, 0.560784, 1 )
Button/colors/font_color_hover = Color( 1, 0.756863, 0.560784, 1 )
Button/colors/font_color_pressed = Color( 1, 0.447059, 0, 1 )

[sub_resource type="Animation" id=891]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=892]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=897]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.713726, 0.262745, 0.196078 ), Color( 1, 0.713726, 0.262745, 0.784314 ) ]
}

[sub_resource type="Animation" id=898]
resource_name = "Inactive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="DeathScreen" type="CanvasLayer"]
pause_mode = 2
layer = 43
visible = false
script = ExtResource( 1 )

[node name="Desktop-1920X1080jpg" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 959, 541.5 )
scale = Vector2( 1.00104, 1.02757 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
method_call_mode = 1
"anims/Fade In" = SubResource( 8 )
"anims/Fade Out" = SubResource( 10 )
anims/RESET = SubResource( 9 )

[node name="Black" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 972, 544 )
scale = Vector2( 6.48, 6.47619 )
texture = ExtResource( 3 )

[node name="StartAnim" type="AnimationPlayer" parent="Black"]
reset_on_save = false
anims/Quit = SubResource( 17 )
anims/RESET = SubResource( 18 )
anims/Start = SubResource( 19 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -339.0
margin_top = -335.0
margin_right = 339.0
margin_bottom = -138.0
theme = SubResource( 903 )
bbcode_enabled = true
bbcode_text = "[center]You died"
text = "You died"

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Load Game" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.575
margin_top = 88.125
margin_right = 223.425
margin_bottom = 138.125
focus_mode = 0
theme = SubResource( 890 )
enabled_focus_mode = 0
text = "Retry"
flat = true
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="Load Game"]
modulate = Color( 1, 0.713726, 0.262745, 0.196078 )
show_behind_parent = true
position = Vector2( 224.263, 22.4336 )
scale = Vector2( 5.02101, 0.547514 )
texture = ExtResource( 4 )

[node name="LoadAnim" type="AnimationPlayer" parent="Load Game"]
reset_on_save = false
anims/Hover = SubResource( 891 )
anims/Inactive = SubResource( 892 )

[node name="Quit to Desktop" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = 136.059
margin_right = 189.0
margin_bottom = 186.059
focus_mode = 0
theme = SubResource( 890 )
enabled_focus_mode = 0
text = "qUIT TO DESKTOP"
flat = true
icon_align = 1
expand_icon = true

[node name="Sprite" type="Sprite" parent="Quit to Desktop"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 189.434, 22.4336 )
scale = Vector2( 5.02101, 0.547514 )
texture = ExtResource( 4 )

[node name="QuitAnim" type="AnimationPlayer" parent="Quit to Desktop"]
reset_on_save = false
anims/Hover = SubResource( 897 )
anims/Inactive = SubResource( 898 )

[node name="Choir" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
bus = "Music"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="timeout" from="QuitTimer" to="." method="_on_QuitTimer_timeout"]
[connection signal="mouse_entered" from="Load Game" to="." method="_on_Load_Game_mouse_entered"]
[connection signal="mouse_exited" from="Load Game" to="." method="_on_Load_Game_mouse_exited"]
[connection signal="pressed" from="Load Game" to="." method="_on_Load_Game_pressed"]
[connection signal="mouse_entered" from="Quit to Desktop" to="." method="_on_Quit_to_Desktop_mouse_entered"]
[connection signal="mouse_exited" from="Quit to Desktop" to="." method="_on_Quit_to_Desktop_mouse_exited"]
[connection signal="pressed" from="Quit to Desktop" to="." method="_on_Quit_to_Desktop_pressed"]
